# Sudoku-Solver

./: README.md  stack.yaml  sudoku.cabal  testBoard1.txt
app/: Main.hs
src/: Sudoku.hs
test/: Spec.hs
