name:                sudoku
version:             0.1.0.0
synopsis:            A simple sudoku solvers
-- description:
homepage:            https://github.com/8BitMate/sudoku#readme
license:             BSD3
license-file:        LICENSE
author:              Asbjørn Gaarde
maintainer:          asbjorn_gaarde@hotmail.com
copyright:           2017 Asbjørn Gaarde
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sudoku
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , primitive
  default-language:    Haskell2010

executable sudoku-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=- -O
  build-depends:       base
                     , sudoku
  default-language:    Haskell2010

test-suite sudoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sudoku
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/8BitMate/sudoku
